# backend-utils/bin/backend-swagger/docs/swagger.json
@@ -1,225 +1,1 @@
-{
-    "swagger": "2.0",
-    "info": {
-        "contact": {}
-    },
-    "paths": {
-        "/api/v1/auth/account/change_password": {
-            "post": {
-                "description": "Change the password of an account",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "account::change_password"
-                ],
-                "summary": "Change Password",
-                "parameters": [
-                    {
-                        "description": "oldPasword newPassword",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/mod_user.ChangePassword"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/api/v1/auth/account/logout": {
-            "post": {
-                "description": "...",
-                "tags": [
-                    "account::logout"
-                ],
-                "summary": "Account logout",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/structs.ResponseOK"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/open/account/login": {
-            "post": {
-                "description": "login in with phone/email and password",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "account::login"
-                ],
-                "summary": "Account login",
-                "parameters": [
-                    {
-                        "description": "login data",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/biz_user.LoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/biz_user.LoginResponse"
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "definitions": {
-        "biz_user.LoginRequest": {
-            "type": "object",
-            "properties": {
-                "phone": {
-                    "type": "string",
-                    "x-order": "01",
-                    "example": "^1[3456789][0-9]{9}$"
-                },
-                "email": {
-                    "type": "string",
-                    "x-order": "02",
-                    "example": "john@noreply.local"
-                },
-                "password": {
-                    "type": "string",
-                    "x-order": "03"
-                }
-            }
-        },
-        "biz_user.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "description": "account id",
-                    "type": "string",
-                    "x-order": "01"
-                },
-                "createdAt": {
-                    "description": "created time RFC3339",
-                    "type": "string",
-                    "x-order": "02"
-                },
-                "updatedAt": {
-                    "description": "updated time",
-                    "type": "string",
-                    "x-order": "03"
-                },
-                "status": {
-                    "description": "account status",
-                    "type": "string",
-                    "x-order": "04"
-                },
-                "firstname": {
-                    "description": "firstname",
-                    "type": "string",
-                    "maxLength": 24,
-                    "minLength": 2,
-                    "x-order": "05",
-                    "example": "John"
-                },
-                "lastname": {
-                    "description": "lastname",
-                    "type": "string",
-                    "maxLength": 24,
-                    "minLength": 2,
-                    "x-order": "06",
-                    "example": "John"
-                },
-                "phone": {
-                    "description": "Phone number",
-                    "type": "string",
-                    "maxLength": 20,
-                    "minLength": 6,
-                    "x-order": "07",
-                    "example": "^1[3456789][0-9]{9}$"
-                },
-                "email": {
-                    "description": "email address",
-                    "type": "string",
-                    "maxLength": 128,
-                    "minLength": 5,
-                    "x-order": "08",
-                    "example": "john@noreply.local"
-                },
-                "level": {
-                    "description": "level",
-                    "type": "string",
-                    "x-order": "09"
-                },
-                "labels": {
-                    "description": "labels",
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "x-order": "10"
-                },
-                "tokenId": {
-                    "type": "string",
-                    "x-order": "21"
-                },
-                "token": {
-                    "type": "string",
-                    "x-order": "22"
-                },
-                "expiresAt": {
-                    "description": "unix 时间戳",
-                    "type": "integer",
-                    "x-order": "23",
-                    "example": 1715008592
-                }
-            }
-        },
-        "mod_user.ChangePassword": {
-            "type": "object",
-            "properties": {
-                "newPassword": {
-                    "type": "string"
-                },
-                "oldPassword": {
-                    "type": "string"
-                }
-            }
-        },
-        "structs.ResponseOK": {
-            "type": "object",
-            "properties": {
-                "requestId": {
-                    "description": "string: uuid",
-                    "type": "string",
-                    "x-order": "01",
-                    "example": "3cc643bd-7f85-493e-8324-6e491db7b3d8"
-                },
-                "code": {
-                    "description": "string: OK",
-                    "type": "string",
-                    "x-order": "02",
-                    "example": "OK"
-                },
-                "data": {
-                    "description": "any: response data",
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    },
-                    "x-order": "03",
-                    "example": {
-                        "answer": "hello",
-                        "value": "42"
-                    }
-                }
-            }
-        }
-    }
-}
+{"swagger":"2.0","info":{"contact":{}},"paths":{"/api/v1/auth/account/change_password":{"post":{"description":"Change the password of an account","consumes":["application/json"],"tags":["account::change_password"],"summary":"Change Password","parameters":[{"description":"oldPasword newPassword","name":"request","in":"body","required":true,"schema":{"$ref":"#/definitions/mod_user.ChangePassword"}}],"responses":{}}},"/api/v1/auth/account/logout":{"post":{"description":"...","tags":["account::logout"],"summary":"Account logout","responses":{"200":{"description":"OK","schema":{"$ref":"#/definitions/structs.ResponseOK"}}}}},"/api/v1/auth/account/query":{"get":{"description":"...","consumes":["application/json"],"tags":["account::query"],"summary":"Query accounts","parameters":[{"maximum":100,"minimum":15,"type":"integer","x-order":"01","description":"minimum: 15\nmaximum: 100\ndefault: 15","name":"pageSize","in":"query"},{"type":"integer","x-order":"02","description":"minimum: 1","name":"pageIndex","in":"query"},{"enum":["createdAt","updatedAt","firstname","lastname"],"type":"string","x-order":"03","description":"enum: createdAt,updatedAt,firstname,lastname\ndefault: createdAt","name":"sort","in":"query"},{"enum":["asc","desc"],"type":"string","x-order":"04","description":"enum: asc,desc\ndefault: asc","name":"order","in":"query"},{"type":"string","x-order":"10","name":"search","in":"query"},{"enum":["admin","editor","reviewer","user","guest"],"type":"string","x-order":"11","description":"enum: admin,editor,reviewer,user,guest\ndefault:","name":"level","in":"query"},{"enum":["created","activated","blocked","deleted"],"type":"string","x-order":"12","description":"enum: created,activated,blocked,deleted\ndefault: activated","name":"status","in":"query"}],"responses":{"200":{"description":"OK","schema":{"$ref":"#/definitions/utils.PageResult-mod_user_Account"}}}}},"/api/v1/open/account/login":{"post":{"description":"login in with phone/email and password","consumes":["application/json"],"tags":["account::login"],"summary":"Account login","parameters":[{"description":"login data","name":"request","in":"body","required":true,"schema":{"$ref":"#/definitions/biz_user.LoginRequest"}}],"responses":{"200":{"description":"OK","schema":{"$ref":"#/definitions/biz_user.LoginResponse"}}}}}},"definitions":{"biz_user.LoginRequest":{"type":"object","properties":{"phone":{"type":"string","x-order":"01","example":"^1[3456789][0-9]{9}$"},"email":{"type":"string","x-order":"02","example":"john@noreply.local"},"password":{"type":"string","x-order":"03"}}},"biz_user.LoginResponse":{"type":"object","properties":{"id":{"description":"account id","type":"string","x-order":"01"},"createdAt":{"description":"created time RFC3339","type":"string","x-order":"02"},"updatedAt":{"description":"updated time","type":"string","x-order":"03"},"status":{"description":"account status","type":"string","x-order":"04"},"firstname":{"description":"firstname","type":"string","maxLength":24,"minLength":2,"x-order":"05","example":"John"},"lastname":{"description":"lastname","type":"string","maxLength":24,"minLength":2,"x-order":"06","example":"John"},"phone":{"description":"Phone number","type":"string","maxLength":20,"minLength":6,"x-order":"07","example":"^1[3456789][0-9]{9}$"},"email":{"description":"email address","type":"string","maxLength":128,"minLength":5,"x-order":"08","example":"john@noreply.local"},"level":{"description":"level","type":"string","x-order":"09"},"labels":{"description":"labels","type":"array","items":{"type":"string"},"x-order":"10"},"tokenId":{"type":"string","x-order":"21"},"token":{"type":"string","x-order":"22"},"expiresAt":{"description":"unix 时间戳","type":"integer","x-order":"23","example":1715008592}}},"mod_user.Account":{"type":"object","properties":{"id":{"description":"account id","type":"string","x-order":"01"},"createdAt":{"description":"created time RFC3339","type":"string","x-order":"02"},"updatedAt":{"description":"updated time","type":"string","x-order":"03"},"status":{"description":"account status","type":"string","x-order":"04"},"firstname":{"description":"firstname","type":"string","maxLength":24,"minLength":2,"x-order":"05","example":"John"},"lastname":{"description":"lastname","type":"string","maxLength":24,"minLength":2,"x-order":"06","example":"John"},"phone":{"description":"Phone number","type":"string","maxLength":20,"minLength":6,"x-order":"07","example":"^1[3456789][0-9]{9}$"},"email":{"description":"email address","type":"string","maxLength":128,"minLength":5,"x-order":"08","example":"john@noreply.local"},"level":{"description":"level","type":"string","x-order":"09"},"labels":{"description":"labels","type":"array","items":{"type":"string"},"x-order":"10"}}},"mod_user.ChangePassword":{"type":"object","properties":{"newPassword":{"type":"string"},"oldPassword":{"type":"string"}}},"structs.ResponseOK":{"type":"object","properties":{"requestId":{"description":"string: uuid","type":"string","x-order":"01","example":"3cc643bd-7f85-493e-8324-6e491db7b3d8"},"code":{"description":"string: OK","type":"string","x-order":"02","example":"ok"},"data":{"description":"any: response data","type":"object","additionalProperties":{"type":"string"},"x-order":"03","example":{"answer":"hello","value":"42"}}}},"utils.PageResult-mod_user_Account":{"type":"object","properties":{"items":{"type":"array","items":{"$ref":"#/definitions/mod_user.Account"}},"pageIndex":{"type":"integer"},"pageSize":{"type":"integer"},"total":{"type":"integer"}}}}}
